--- a/partials/code.html
+++ b/partials/code.html
@@ -11,13 +11,13 @@
           A fitness music app consuming Fitbit and Spotify APIs. FitBeat pulls in daily heart rate data, displays it on a dashboard and allows the user to create and populate Spotify playlists whose BPM falls within the ranges of Fitbit's exercise heart rate categories. Uses Ruby on Rails, OAuth2 authorization, jQuery, RSpec, and VCR to test API interaction.
         </div>
         <div class="project-links">
-          <a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub</a>
+          <a target="_blank" href="http://github.com/kamiboers/fitbeat">View on GitHub</a><br>
         </div>
       </div>
 
       <div class="project-card">
         <span class="project-title">Q*bert</span>
-        <img src="./images/qbertstatic.png" class="project-image">
+        <img src="./images/qbertstatic.png" class="project-image" id="qbert-img">
         <div class="project-description">
           Classic arcade game replicated with HTML Canvas and client-side JavaScript during a ten day, three-person collaboration. Tracks local high scores using local storage. Q*Bert also incorporates jQuery, CSS, and unit testing with Minitest, Mocha, and Chai.
         </div>
